--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,1 +1,11 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+    opacity: 0.6;
+    cursor: pointer;
+}
+
+::-webkit-calendar-picker-indicator:hover {
+    opacity: 1;
+}
